# screenshot-cdn-rust

./: Cargo.toml  Dockerfile  README.md
src/: devices.rs  main.rs
