[package]
name = "screenshot-cdn-rust"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
headless_chrome = "0.9.0"
phf = { version = "0.10.1", features = ["macros"] }
